src/containers/App.css
.App .wrapper {
  margin: auto;
  display: flex;
  height: 100vh;
  flex-direction: column;
}

.App .AppNavBar {
  height: 3.5rem;
}

.App .App-contents {
  transition: padding 0.15s ease-out;
  padding-bottom: 6rem;
}

.App .AppFooter {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  transition: height 0.15s ease-out;
  height: 3.5rem;
}

.App .AppFooter.expanded ~ div {
  padding-bottom: 12rem;
}

.App .AppFooter.expanded {
  height: 12rem;
}

